syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.paymentPlatformPoc.grpc.adaptor";
option java_outer_classname = "PaymentPlatformAdaptor";

package com.paymentPlatformPoc.grpc.adaptor;

service PaymentAdaptor {
  rpc makePayment (PaymentRequest) returns (PaymentResponse) {}
  rpc getListOfSalesSummary (DateRange) returns (ListOfSalesSummary) {}
}

message PaymentRequest {
  string price = 1;
  double priceModifier = 2;
  string paymentMethod = 3;
  string datetime = 4;
}

message PaymentResponse {
  string finalPrice = 1;
  int64 points = 2;
}

message DateRange {
  string startDateTime = 1;
  string endDateTime = 2;
}

message ListOfSalesSummary {
  repeated SalesSummary sales = 1;
}

message SalesSummary {
  string datetime = 1;
  string sales = 2;
  int64 points = 3;
}